threaded version behind cmake flags + qt for webassembly doesn't support https request from threads (https://bugreports.qt.io/browse/QTBUG-109396)

threaded version doesn't work on mobile safari